--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
 	<meta name="msapplication-tap-highlight" content="no">
-    <script type="text/javascript" src="/cloak.js"></script>
+    <script type="text/javascript" src="cloak.js"></script>
     <meta name="robots" content="noindex,nofollow" />
-    <script src="/poki-sdk.js"></script>
-    <script src="/poki-sdk-core-v2.263.0.js"></script>
+    <script src="poki-sdk.js"></script>
+    <script src="poki-sdk-core-v2.263.0.js"></script>
         <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
         <script type="text/javascript" src="js/createjs.min.js"></script>
         <script type="text/javascript" src="js/screenfull.js"></script>
