--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico">
-    <script type="text/javascript" src="/js/jquery-1.11.3.min.js"></script>
-    <link rel="stylesheet" href="/css/main.css">
-    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2751856053825499" crossorigin="anonymous"></script> -->
+    <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+    <link rel="stylesheet" href="css/main.css">
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-#" crossorigin="anonymous"></script> -->
 </head>
 
 <body style="overflow-x:hidden;">
@@ -216,10 +216,10 @@
     </footer>
 
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type='text/javascript' src='/js/runtime.js'></script>
-    <script type='text/javascript' src='/js/vendors.js'></script>
-    <script type='text/javascript' src='/js/main.js'></script>
-    <script type='text/javascript' src='/js/custom.js'></script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type='text/javascript' src='js/runtime.js'></script>
+    <script type='text/javascript' src='js/vendors.js'></script>
+    <script type='text/javascript' src='js/main.js'></script>
+    <script type='text/javascript' src='js/custom.js'></script>
     <script>
             getGamelist();
             getPartners();
