--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
                 </a>
                 <nav id="mainNav" class="header__nav">
                     <ul class="main-nav">
-                        <li class="main-nav__item"><a href="match/" class="main-nav__link"><i class="icon-category-match3"></i>Match</a></li>
-                        <li class="main-nav__item"><a href="puzzle/" class="main-nav__link"> <i class="icon-category-puzzle"></i>Puzzle</a></li>
-                        <li class="main-nav__item"><a href="shooting/" class="main-nav__link"><i class="icon-category-action"></i>Shooting</a></li>
-                        <li class="main-nav__item"><a href="cards/" class="main-nav__link"><i class="icon-category-cards"></i>Cards</a></li>
-                        <li class="main-nav__item"><a href="jump-run/" class="main-nav__link"><i class="icon-category-jumpnrun"></i>Jump & Run</a></li>
-                        <li class="main-nav__item"><a href="sport/" class="main-nav__link"><i class="icon-category-sport"></i>Sport</a></li>
+                        <li class="main-nav__item"><a href="match.html" class="main-nav__link"><i class="icon-category-match3"></i>Match</a></li>
+                        <li class="main-nav__item"><a href="puzzle.html" class="main-nav__link"> <i class="icon-category-puzzle"></i>Puzzle</a></li>
+                        <li class="main-nav__item"><a href="shooting.html" class="main-nav__link"><i class="icon-category-action"></i>Shooting</a></li>
+                        <li class="main-nav__item"><a href="cards.html" class="main-nav__link"><i class="icon-category-cards"></i>Cards</a></li>
+                        <li class="main-nav__item"><a href="jump-run.html" class="main-nav__link"><i class="icon-category-jumpnrun"></i>Jump & Run</a></li>
+                        <li class="main-nav__item"><a href="sport.html" class="main-nav__link"><i class="icon-category-sport"></i>Sport</a></li>
                     </ul>
                 </nav>
 
