--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Games235 - Free Online Games</title>
+    <title>GoojDex Games Center</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico">
@@ -17,8 +17,8 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <a href="/" class="header__logo" aria-label="Games235.com">
-                    <img src="/images/logoweb.png" alt="Games235">
+                <a href="/test" class="header__logo" aria-label="devchandel.tk">
+                    <img src="logoweb.png" alt="devchandel.tk">
                 </a>
                 <nav id="mainNav" class="header__nav">
                     <ul class="main-nav">
@@ -52,8 +52,8 @@
                 <header class="section__header">
 
                     <h1 class="hero cover-title__text" style="font-size: 4.125rem;">
-                        <span class="title-decor" data-text="GAMES 235" style="will-change: transform; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);">
-                            GAMES 235
+                        <span class="title-decor" data-text="GoojDex Games Center" style="will-change: transform; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);">
+                            GoojDex Games Center
                         </span>
                     </h1>
                     <p class="section__intro">Play the Newest Games Instantly!</p>
@@ -69,7 +69,7 @@
                     </div> -->
                 </div>
                 <p>&nbsp;</p>
-                <p>Games235 features the latest and best free online games. You can enjoy playing fun games without interruptions from downloads, intrusive ads, or pop-ups. Just load up your favorite games instantly in your web browser and enjoy the experience.</p>
+                <p>GoojDex Games Center features the latest and best free online games. You can enjoy playing fun games without interruptions from downloads, intrusive ads, or pop-ups. Just load up your favorite games instantly in your web browser and enjoy the experience.</p>
                 <p>You can play our games on desktop mobile devices. That includes everything from desktop PCs, laptops, and Chromebooks, to the latest smartphones and tablets from Apple and Android.</p>
             </div>
 
@@ -83,7 +83,7 @@
                 <section id="partners" style="margin-bottom: 90px;padding-top:30px" class="section main-wallets" data-effect="{ &quot;name&quot;: &quot;fadeIn&quot;, &quot;target&quot;: &quot;.main-games235__item&quot; }">
                     <div class="container">
                         <header class="section__header dev-gateway__header">
-                            <h2 class="hero section__title main-games__title" data-text="Our Partners">
+                            <h2 class="hero section__title main-games__title" data-text="Dev Chandel">
 
                                 <svg aria-hidden="true" focusable="false" class="icon main-games__decor" data-parallax="-200%" style="transform: translate(0%, -155.009%) translate3d(0px, -17.3967px, 0px);">
                                     <use xlink:href="#icon-grid"><svg viewBox="0 0 39 39" id="icon-grid" xmlns="http://www.w3.org/2000/svg">
@@ -91,7 +91,7 @@
                                         </svg></use>
                                 </svg>
 
-                                Our Partners
+                                Dev Chandel
                             </h2>
                         </header>
                         <div class="row main-games235__list" style="text-align: center;padding-top: 40px;">
@@ -113,13 +113,11 @@
         <div class="container">
             <div class="footer__inner">
                 <div>
-                    <p class="footer__copy" style="margin-bottom:0px;"><a href="/">©2013-2022 Games235.</a></p>
+                    <p class="footer__copy" style="margin-bottom:0px;"><a href="/">©2023 GoojDex Games Center.</a></p>
 
                     <p class="footer__copy" style="margin-bottom:15px;">All Rights Reserved</p>
                     <div class="footer__email">
-                        <a href="/cdn-cgi/l/email-protection#6b02050d042b0c0a060e1859585e45080406">
-                            <span class="__cf_email__" data-cfemail="640d0a020b2403050901175657514a070b09">[email&#160;protected]</span>
-                        </a>
+                        
                         <p style="font-size: 10px;margin-top:0px;">All games on this website are the property </br> of their respective owners.</p>
                     </div>
 
