--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="socialize socialize_footer">
 
                     <div class="socialize__row">
-                        <a href="/privacy/" class="socialize__button">
+                        <a href="/test/privacy/" class="socialize__button">
                             <span>
 
                                 <svg class="svg-icon" viewBox="0 0 20 20">
@@ -138,7 +138,7 @@
                                 </svg>
                             </span>
                             Privacy Policy </a>
-                        <a href="/tos/" class="socialize__button">
+                        <a href="/test/tos/" class="socialize__button">
                             <span>
 
                                 <svg class="svg-icon" viewBox="0 0 20 20">
@@ -154,7 +154,7 @@
                     </div>
 
                     <div class="socialize__row">
-                        <a href="/faq/" class="socialize__button">
+                        <a href="/test/faq/" class="socialize__button">
                             <span>
 
                                 <svg class="svg-icon" viewBox="0 0 20 20">
@@ -167,7 +167,7 @@
                                 </svg>
                             </span>
                             FAQ </a>
-                        <a href="/contact/" class="socialize__button">
+                        <a href="/test/contact/" class="socialize__button">
                             <span>
 
                                 <svg class="svg-icon" viewBox="0 0 20 20">
@@ -185,7 +185,7 @@
 
                 <div style="position:relative;">
                     <a href="/" class="footer__logo">
-                        <img src="/images/logoweb.png" alt="Games235">
+                        <img src="/images/logoweb.png" alt="GoojDex Games Center">
                     </a>
 
                     <ul class="socialize__row_icons">
@@ -214,7 +214,7 @@
     </footer>
 
 
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type='text/javascript' src='js/runtime.js'></script>
+    <script type='text/javascript' src='js/runtime.js'></script>
     <script type='text/javascript' src='js/vendors.js'></script>
     <script type='text/javascript' src='js/main.js'></script>
     <script type='text/javascript' src='js/custom.js'></script>
