--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="container">
             <div class="footer__inner">
                 <div>
-                    <p class="footer__copy" style="margin-bottom:0px;"><a href="/">©2023 GoojDex Games Center.</a></p>
+                    <p class="footer__copy" style="margin-bottom:0px;"><a href="/test">©2023 GoojDex Games Center.</a></p>
 
                     <p class="footer__copy" style="margin-bottom:15px;">All Rights Reserved</p>
                     <div class="footer__email">
