--- a/index.html
+++ b/index.html
@@ -190,19 +190,19 @@
 
                     <ul class="socialize__row_icons">
                         <li>
-                            <a href="https://www.facebook.com/games235/" class="socialize__icon" target="_blank" aria-label="Facebook">
+                            <a href="https://www.facebook.com/#/" class="socialize__icon" target="_blank" aria-label="Facebook">
                                 <img class="icon" src="/images/facebook.svg"  alt="Facebook"  height="16" width="8">
                             </a>
                         </li>
 
                         <li>
-                            <a href="https://www.twitter.com/games235/" class="socialize__icon" target="_blank" aria-label="Twitter">
+                            <a href="https://www.twitter.com/#/" class="socialize__icon" target="_blank" aria-label="Twitter">
                                 <img src="/images/twitter.svg" alt="Twitter"  height="13" width="16">
                             </a>
                         </li>
 
                         <li>
-                            <a href="https://www.youtube.com/games235/" class="socialize__icon" target="_blank" aria-label="Youtube">
+                            <a href="https://www.youtube.com/#/" class="socialize__icon" target="_blank" aria-label="Youtube">
                                <img src="/images/youtube.svg" alt="Youtube" height="13" width="18">
                             </a>
                         </li>
