--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main class="main">
         <section id="mainGames" class="section main-games" data-effect="{ &quot;name&quot;: &quot;fadeInScaleOut&quot;, &quot;target&quot;: &quot;.main-games__item&quot; }">
             <div class="main-games__decor-title" data-parallax="50%" aria-hidden="true" style="transform: translate(0%, 45.0054%) translate3d(-284.8px, 0px, 0px);">
-                Games
+                Games Center
             </div>
             <div class="container">
                 <header class="section__header">
