--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>GoojDex Games Center</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="image/favicon.ico">
     <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
-    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-#" crossorigin="anonymous"></script> -->
+    
 </head>
 
 <body style="overflow-x:hidden;">
@@ -17,17 +17,17 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <a href="/test" class="header__logo" aria-label="devchandel.tk">
-                    <img src="logoweb.png" alt="devchandel.tk">
+                <a href="/GoojDexGamesCenter" class="header__logo" aria-label="devchandel.tk">
+                    <img src="image/logoweb.png" alt="devchandel.tk">
                 </a>
                 <nav id="mainNav" class="header__nav">
                     <ul class="main-nav">
-                        <li class="main-nav__item"><a href="match.html" class="main-nav__link"><i class="icon-category-match3"></i>Match</a></li>
-                        <li class="main-nav__item"><a href="puzzle.html" class="main-nav__link"> <i class="icon-category-puzzle"></i>Puzzle</a></li>
-                        <li class="main-nav__item"><a href="shooting.html" class="main-nav__link"><i class="icon-category-action"></i>Shooting</a></li>
-                        <li class="main-nav__item"><a href="cards.html" class="main-nav__link"><i class="icon-category-cards"></i>Cards</a></li>
-                        <li class="main-nav__item"><a href="jump-run.html" class="main-nav__link"><i class="icon-category-jumpnrun"></i>Jump & Run</a></li>
-                        <li class="main-nav__item"><a href="sport.html" class="main-nav__link"><i class="icon-category-sport"></i>Sport</a></li>
+                        <li class="main-nav__item"><a href="match" class="main-nav__link"><i class="icon-category-match3"></i>Match</a></li>
+                        <li class="main-nav__item"><a href="puzzle" class="main-nav__link"> <i class="icon-category-puzzle"></i>Puzzle</a></li>
+                        <li class="main-nav__item"><a href="shooting" class="main-nav__link"><i class="icon-category-action"></i>Shooting</a></li>
+                        <li class="main-nav__item"><a href="cards" class="main-nav__link"><i class="icon-category-cards"></i>Cards</a></li>
+                        <li class="main-nav__item"><a href="jump-run" class="main-nav__link"><i class="icon-category-jumpnrun"></i>Jump & Run</a></li>
+                        <li class="main-nav__item"><a href="sport" class="main-nav__link"><i class="icon-category-sport"></i>Sport</a></li>
                     </ul>
                 </nav>
 
@@ -113,7 +113,7 @@
         <div class="container">
             <div class="footer__inner">
                 <div>
-                    <p class="footer__copy" style="margin-bottom:0px;"><a href="/test">©2023 GoojDex Games Center.</a></p>
+                    <p class="footer__copy" style="margin-bottom:0px;"><a href="/GoojDexGamesCenter">©2023 GoojDex Games Center.</a></p>
 
                     <p class="footer__copy" style="margin-bottom:15px;">All Rights Reserved</p>
                     <div class="footer__email">
@@ -125,7 +125,7 @@
                 <div class="socialize socialize_footer">
 
                     <div class="socialize__row">
-                        <a href="/test/privacy/" class="socialize__button">
+                        <a href="/GoojDexGamesCenter/page/privacy/" class="socialize__button">
                             <span>
 
                                 <svg class="svg-icon" viewBox="0 0 20 20">
@@ -138,7 +138,7 @@
                                 </svg>
                             </span>
                             Privacy Policy </a>
-                        <a href="/test/tos/" class="socialize__button">
+                        <a href="/GoojDexGamesCenter/page/terms/" class="socialize__button">
                             <span>
 
                                 <svg class="svg-icon" viewBox="0 0 20 20">
@@ -154,7 +154,7 @@
                     </div>
 
                     <div class="socialize__row">
-                        <a href="/test/faq/" class="socialize__button">
+                        <a href="/GoojDexGamesCenter/page/faq/" class="socialize__button">
                             <span>
 
                                 <svg class="svg-icon" viewBox="0 0 20 20">
@@ -167,7 +167,7 @@
                                 </svg>
                             </span>
                             FAQ </a>
-                        <a href="/test/contact/" class="socialize__button">
+                        <a href="/GoojDexGamesCenter/page/contact/" class="socialize__button">
                             <span>
 
                                 <svg class="svg-icon" viewBox="0 0 20 20">
@@ -184,26 +184,26 @@
                 </div>
 
                 <div style="position:relative;">
-                    <a href="/" class="footer__logo">
-                        <img src="/images/logoweb.png" alt="GoojDex Games Center">
+                    <a href="/GoojDexGamesCenter" class="footer__logo">
+                        <img src="image/logoweb.png" alt="GoojDex Games Center">
                     </a>
 
                     <ul class="socialize__row_icons">
                         <li>
                             <a href="https://www.facebook.com/#/" class="socialize__icon" target="_blank" aria-label="Facebook">
-                                <img class="icon" src="/images/facebook.svg"  alt="Facebook"  height="16" width="8">
+                                <img class="icon" src="image/facebook.svg"  alt="Facebook"  height="16" width="8">
                             </a>
                         </li>
 
                         <li>
                             <a href="https://www.twitter.com/#/" class="socialize__icon" target="_blank" aria-label="Twitter">
-                                <img src="/images/twitter.svg" alt="Twitter"  height="13" width="16">
+                                <img src="image/twitter.svg" alt="Twitter"  height="13" width="16">
                             </a>
                         </li>
 
                         <li>
                             <a href="https://www.youtube.com/#/" class="socialize__icon" target="_blank" aria-label="Youtube">
-                               <img src="/images/youtube.svg" alt="Youtube" height="13" width="18">
+                               <img src="image/youtube.svg" alt="Youtube" height="13" width="18">
                             </a>
                         </li>
                     </ul>
