--- a/data/games/2048 Cupcakes.html
+++ b/data/games/2048 Cupcakes.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <title>2048 Cupcakes - GoojDex Games Center</title>
-  <link rel="icon" type="image/png" href="image/favicon.png" />
+  <link rel="icon" type="image/png" href="https://goojdex.github.io/GoojDexGamesCenter/image/favicon.png" />
   <style>
 		html,body { margin: 0; padding: 0; height: 100%; overflow: hidden; }
 		#openfl-content { background: #000000; width: 100%; height: 100%; position:fixed; top:0; left:0; bottom:0; right:0; border:none; margin:0; padding:0; overflow:hidden; z-index:999999; }
