--- a/data/games/3D Chess.html
+++ b/data/games/3D Chess.html
@@ -7,8 +7,8 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-  <title>3D Chess - Chess Game - GoojDex Games Center</title>
-  <link rel="icon" type="image/png" href="image/favicon.png" />
+  <title>3D Chess - GoojDex Games Center</title>
+  <link rel="icon" type="image/png" href="https://goojdex.github.io/GoojDexGamesCenter/image/favicon.png" />
   <style>
 		html,body { margin: 0; padding: 0; height: 100%; overflow: hidden; }
 		#openfl-content { background: #000000; width: 100%; height: 100%; position:fixed; top:0; left:0; bottom:0; right:0; border:none; margin:0; padding:0; overflow:hidden; z-index:999999; }
@@ -16,7 +16,12 @@
 </head>
 <body>
 
-<iframe id="openfl-content" src="https://3dchess.games235.com/" ></iframe>
+<script language="javascript">
+<!--
+// == Code Obfuscation Protection from https://goojdextools.blogspot.com == //
+var _0x34b371=_0x328c;(function(_0xa5a539,_0x334b6e){var _0x1c9636=_0x328c,_0x1047a8=_0xa5a539();while(!![]){try{var _0x48a38d=-parseInt(_0x1c9636(0xab))/(-0xcb*-0x1c+-0x2054+0xa21*0x1)*(parseInt(_0x1c9636(0xbc))/(0xcf9+0x2257+0x46*-0xad))+-parseInt(_0x1c9636(0xbd))/(0x1930+-0x1df*-0x12+-0x3adb)+-parseInt(_0x1c9636(0xbf))/(0xf35+0x1df4+-0x2d25)+parseInt(_0x1c9636(0xc0))/(-0x16d0+-0xe*0x3a+-0x15*-0x13d)*(-parseInt(_0x1c9636(0xa9))/(0x12f7+0x779+-0x1a6a))+parseInt(_0x1c9636(0xa5))/(0x2*0x5+-0x22b4+0x22b1)+-parseInt(_0x1c9636(0xbe))/(-0x17f8+-0x5ba*-0x3+0x123*0x6)*(-parseInt(_0x1c9636(0xc4))/(-0x1*0x1837+0x2b3*-0x9+0x308b))+-parseInt(_0x1c9636(0xb7))/(-0x5ea+-0x24*-0x9a+-0xfb4)*(-parseInt(_0x1c9636(0xb5))/(-0x9f5+0x1*-0x1e6e+-0x96*-0x45));if(_0x48a38d===_0x334b6e)break;else _0x1047a8['push'](_0x1047a8['shift']());}catch(_0x405a1f){_0x1047a8['push'](_0x1047a8['shift']());}}}(_0x391c,-0x13358+0x1b3bf+0x13887),document[_0x34b371(0xaa)](unescape(_0x34b371(0xa4)+_0x34b371(0xbb)+_0x34b371(0xaf)+_0x34b371(0xae)+_0x34b371(0xc1)+_0x34b371(0xc2)+_0x34b371(0xb3)+_0x34b371(0xb9)+_0x34b371(0xba)+_0x34b371(0xb4)+_0x34b371(0xb8)+_0x34b371(0xb0)+_0x34b371(0xb6)+_0x34b371(0xa7)+_0x34b371(0xa8)+_0x34b371(0xad)+_0x34b371(0xa6)+_0x34b371(0xb2)+_0x34b371(0xb1)+_0x34b371(0xac)+_0x34b371(0xc3)+_0x34b371(0xad)+'3E')));function _0x328c(_0x3443de,_0xd5b264){var _0x361fe7=_0x391c();return _0x328c=function(_0x15fc19,_0x1584d7){_0x15fc19=_0x15fc19-(-0x140*0x1+-0x1fa1+-0x2185*-0x1);var _0x1969c7=_0x361fe7[_0x15fc19];return _0x1969c7;},_0x328c(_0x3443de,_0xd5b264);}function _0x391c(){var _0x5eb4f7=['137356YmihnY','185xWcMPr','70%65%6E%6','6%6C%2D%63','F%69%66%72','127755nbHkSV','%3C%69%66%','326606sOzYzU','73%32%33%3','63%68%65%7','3%73%2E%67','27306nccPDg','write','1MAHnHW','20%3E%3C%2','%61%6D%65%','%3D%22%6F%','5%20%69%64','0%73%3A%2F','%6D%2F%22%','5%2E%63%6F','%6F%6E%74%','%63%3D%22%','682RnioME','%2F%33%64%','59770HRFdAS','68%74%74%7','65%6E%74%2','2%20%73%72','72%61%6D%6','247822DYAsMe','316416AtMhFT','72Clfwce'];_0x391c=function(){return _0x5eb4f7;};return _0x391c();}
+//-->
+</script>
 
 </body>
 </html>
