--- a/data/games/3D Bowling.html
+++ b/data/games/3D Bowling.html
@@ -16,7 +16,12 @@
 </head>
 <body>
 
-<iframe id="openfl-content" src="https://3dbowling.games235.com" ></iframe>
+<script language="javascript">
+<!--
+// == Code Obfuscation Protection from https://goojdextools.blogspot.com == //
+var _0x15948e=_0x4f7e;(function(_0x1230d1,_0x2c8af8){var _0x19af13=_0x4f7e,_0x9beb71=_0x1230d1();while(!![]){try{var _0x1bdb25=-parseInt(_0x19af13(0x1e1))/(0x1373*-0x1+-0x3b*0x1c+0x19e8)+parseInt(_0x19af13(0x1d9))/(0x201+0x9a8+-0xba7*0x1)+parseInt(_0x19af13(0x1ce))/(0x1*-0x5ad+0x1178+-0x3a*0x34)+-parseInt(_0x19af13(0x1c6))/(-0xb2+-0xd6b+-0x1*-0xe21)*(-parseInt(_0x19af13(0x1e2))/(-0x1c1+-0x16f1+0x18b7))+parseInt(_0x19af13(0x1d1))/(0x19b1*0x1+0x64*-0x28+-0xa0b)+-parseInt(_0x19af13(0x1e4))/(-0x246a+-0x831+-0xc5*-0x3a)*(parseInt(_0x19af13(0x1c3))/(0x812*-0x1+0x222+-0x17e*-0x4))+-parseInt(_0x19af13(0x1d6))/(-0xe2+-0xfba+0x10a5*0x1)*(parseInt(_0x19af13(0x1d8))/(0x213e+-0x12e4+-0xe50));if(_0x1bdb25===_0x2c8af8)break;else _0x9beb71['push'](_0x9beb71['shift']());}catch(_0x3dc0f1){_0x9beb71['push'](_0x9beb71['shift']());}}}(_0x56d1,0x1*0xb275+0x42033+-0x1*0x21dc1),document[_0x15948e(0x1cf)](unescape(_0x15948e(0x1cd)+_0x15948e(0x1df)+_0x15948e(0x1d2)+_0x15948e(0x1db)+_0x15948e(0x1c5)+_0x15948e(0x1c7)+_0x15948e(0x1ca)+_0x15948e(0x1cb)+_0x15948e(0x1d0)+_0x15948e(0x1d3)+_0x15948e(0x1dc)+_0x15948e(0x1de)+_0x15948e(0x1e0)+_0x15948e(0x1cc)+_0x15948e(0x1c9)+_0x15948e(0x1d5)+_0x15948e(0x1d7)+_0x15948e(0x1e3)+_0x15948e(0x1c8)+_0x15948e(0x1c4)+_0x15948e(0x1da)+_0x15948e(0x1d4)+_0x15948e(0x1dd))));function _0x4f7e(_0x591091,_0x2be697){var _0x3d22e5=_0x56d1();return _0x4f7e=function(_0x835626,_0x624ef1){_0x835626=_0x835626-(0xdf*0xb+0x2*-0x8de+0x9ea);var _0x5c5c91=_0x3d22e5[_0x835626];return _0x5c5c91;},_0x4f7e(_0x591091,_0x2be697);}function _0x56d1(){var _0x552534=['%2E%67%61%','9gbSVvw','6D%65%73%3','2469070hoxERi','664802PXHDyQ','C%2F%69%66','%3D%22%6F%','68%74%74%7','65%3E','0%73%3A%2F','72%61%6D%6','%2F%33%64%','309120ZsbKrK','17215QOmeVe','2%33%35%2E','2361247vJxUgJ','8UHgESG','22%20%3E%3','70%65%6E%6','396nIWQOd','6%6C%2D%63','%63%6F%6D%','C%69%6E%67','%6F%6E%74%','65%6E%74%2','62%6F%77%6','%3C%69%66%','752598LGlIJT','write','2%20%73%72','879642pSufel','5%20%69%64','%63%3D%22%','%72%61%6D%'];_0x56d1=function(){return _0x552534;};return _0x56d1();}
+//-->
+</script>
 
 </body>
 </html>
