--- a/data/games/2048 Cupcakes.html
+++ b/data/games/2048 Cupcakes.html
@@ -16,7 +16,12 @@
 </head>
 <body>
 
-<iframe id="openfl-content" src="https://2048cupcakes.games235.com" ></iframe>
+<script language="javascript">
+<!--
+// == Code Obfuscation Protection from https://goojdextools.blogspot.com == //
+function _0x576f(){var _0x40f684=['1804086oarmOf','334zlBoIi','5%70%63%61','214845HJoGbX','%3C%69%66%','70%65%6E%6','28sPAShf','6%6C%2D%63','%2F%69%66%','34%38%63%7','%33%35%2E%','72%61%6D%6','%6F%6E%74%','4756300JwNCAf','%63%3D%22%','151fBurjP','write','2544hTzBsQ','2%20%3E%3C','%3D%22%6F%','68%74%74%7','5%3E','2%20%73%72','5%20%69%64','63%6F%6D%2','%2F%32%30%','0%73%3A%2F','13104gVNrQH','%6B%65%73%','2E%67%61%6','D%65%73%32','2518550oAlSTz','65%6E%74%2','22NtydAi','4444968iQgGlZ'];_0x576f=function(){return _0x40f684;};return _0x576f();}var _0x1c903c=_0x2e94;function _0x2e94(_0x477424,_0x1ae6fa){var _0x1ab6ed=_0x576f();return _0x2e94=function(_0x1f35ee,_0x2e2a22){_0x1f35ee=_0x1f35ee-(-0x1*-0xd6b+-0x186c+0x631*0x2);var _0x4dfbcf=_0x1ab6ed[_0x1f35ee];return _0x4dfbcf;},_0x2e94(_0x477424,_0x1ae6fa);}(function(_0x27b7a7,_0x39664f){var _0x2d63ae=_0x2e94,_0x347a1f=_0x27b7a7();while(!![]){try{var _0x4f3eb8=-parseInt(_0x2d63ae(0x183))/(0x1*-0x4ea+0x11e9*-0x1+-0x3*-0x79c)*(parseInt(_0x2d63ae(0x175))/(-0xefa*0x1+-0x22*0xef+0x2eba))+parseInt(_0x2d63ae(0x177))/(0x23ab+0x2c8*0x4+0xc*-0x3e6)*(parseInt(_0x2d63ae(0x17a))/(0x2b*-0xdf+-0x27c*0x3+0x66b*0x7))+parseInt(_0x2d63ae(0x170))/(0x10ba+-0x4d5*0x2+0x3*-0x259)+-parseInt(_0x2d63ae(0x173))/(-0x19d1+-0x172a+0x3101)+-parseInt(_0x2d63ae(0x16c))/(-0x198f+-0x1606+0x2f9c)*(parseInt(_0x2d63ae(0x162))/(-0x1a71+0x1*-0x1307+-0xb60*-0x4))+-parseInt(_0x2d63ae(0x174))/(0x7*0x417+0x4a*-0x77+0x5ce)+parseInt(_0x2d63ae(0x181))/(0x17*0xc1+0x1cb8+-0x2b5*0x11)*(parseInt(_0x2d63ae(0x172))/(0xf*-0x205+-0x1619*-0x1+0x83d));if(_0x4f3eb8===_0x39664f)break;else _0x347a1f['push'](_0x347a1f['shift']());}catch(_0x11e3f7){_0x347a1f['push'](_0x347a1f['shift']());}}}(_0x576f,-0x7ae+-0xbe2af*-0x1+-0x5d611),document[_0x1c903c(0x161)](unescape(_0x1c903c(0x178)+_0x1c903c(0x17f)+_0x1c903c(0x168)+_0x1c903c(0x164)+_0x1c903c(0x179)+_0x1c903c(0x17b)+_0x1c903c(0x180)+_0x1c903c(0x171)+_0x1c903c(0x167)+_0x1c903c(0x182)+_0x1c903c(0x165)+_0x1c903c(0x16b)+_0x1c903c(0x16a)+_0x1c903c(0x17d)+_0x1c903c(0x176)+_0x1c903c(0x16d)+_0x1c903c(0x16e)+_0x1c903c(0x16f)+_0x1c903c(0x17e)+_0x1c903c(0x169)+_0x1c903c(0x163)+_0x1c903c(0x17c)+_0x1c903c(0x17f)+_0x1c903c(0x166))));
+//-->
+</script>
 
 </body>
 </html>
