--- a/index.html
+++ b/index.html
@@ -211,9 +211,8 @@
                 </div>
             </div>
         </div>
-    <center> <div class='text-center small'>
-          Copyright &#169; 2021- <script type='text/javascript'>var creditsyear = new Date();document.write(creditsyear.getFullYear());</script> 
-<a expr:href='data:blog.homepageUrl'><data:blog.title/></a>  All Right Reserved. <i class='fa fa-heart' style='color:#ff695d;'></i>  Designed By <a href='https://www.devchandel-goojdex.tk/' rel='dofollow'target="_blank"><font color='red'>  Dev Chandel</font></a>   </div> </center> 
+    <center> <div>
+          Copyright &#169; 2021- <script type='text/javascript'>var creditsyear = new Date();document.write(creditsyear.getFullYear());</script> Designed By <a href='https://www.devchandel.tk' rel='dofollow'target="_blank"><font color='red'>  Dev Chandel</font></a>   </div> </center> 
     </footer>
 
 
