--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                 c0.219-0.219,0.219-0.575,0-0.794C14.425,6.575,14.069,6.575,13.851,6.794z"></path>
                                 </svg>
                             </span>
-                            Privacy Policy </a>
+                            Privacy </a>
                         <a href="/GoojDexGamesCenter/page/terms" class="socialize__button">
                             <span>
 
@@ -150,7 +150,7 @@
                                 c0.219-0.219,0.219-0.575,0-0.794C14.425,6.575,14.069,6.575,13.851,6.794z"></path>
                                 </svg>
                             </span>
-                            Terms Of Use </a>
+                            Terms </a>
                     </div>
 
                     <div class="socialize__row">
@@ -179,7 +179,7 @@
                                 c0.219-0.219,0.219-0.575,0-0.794C14.425,6.575,14.069,6.575,13.851,6.794z"></path>
                                 </svg>
                             </span>
-                            Contact Us</a>
+                            Contact</a>
                     </div>
                 </div>
 
