--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                 </div>
             </div>
         </div>
-     <div class='text-center small'>
-          Copyright &#169; 2021- <script type='text/javascript'>var creditsyear = new Date();document.write(creditsyear.getFullYear());</script> Designed By <a href='https://www.devchandel.tk' rel='dofollow'target="_blank"><font color='red'>  Dev Chandel</font></a>   </div> 
+    <center> <div class='text-center small'>
+          Copyright &#169; 2021- <script type='text/javascript'>var creditsyear = new Date();document.write(creditsyear.getFullYear());</script> Designed By <a href='https://www.devchandel.tk' rel='dofollow'target="_blank"><font color='red'>  Dev Chandel</font></a>   </div> </center>
     </footer>
 
 
