--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </span>
                     </h1>
                     <p class="section__intro">Play the Newest Games Instantly!</p>
-                    <p class="section__intro section__intro_2" style="font-size: 14px;margin-top: 3px;">You can enjoy playing fun games without interruptions from downloads, intrusive ads, or pop-ups.</p>
+                    <p class="section__intro section__intro_2" style="font-size: 14px;margin-top: 3px;">You can enjoy playing fun games without interruptions from downloads.</p>
                 </header>
                 <div class="row row-list">
                     <!-- <div class='col-md-6 col-lg-4'>
@@ -52,7 +52,7 @@
                     </div> -->
                 </div>
                 <p>&nbsp;</p>
-                <p>GoojDex Games Center features the latest and best free online games. You can enjoy playing fun games without interruptions from downloads, intrusive ads, or pop-ups. Just load up your favorite games instantly in your web browser and enjoy the experience.</p>
+                <p>GoojDex Games Center features the latest and best free online games. You can enjoy playing fun games without interruptions from downloads. Just load up your favorite games instantly in your android device and enjoy the experience.</p>
                 <p>You can play our games on desktop mobile devices. That includes everything from desktop PCs, laptops, and Chromebooks, to the latest smartphones and tablets from Apple and Android.</p>
             </div>
 
@@ -101,7 +101,7 @@
                     <p class="footer__copy" style="margin-bottom:15px;">All Rights Reserved</p>
                     <div class="footer__email">
                         
-                        <p style="font-size: 10px;margin-top:0px;">All games on this website are the property </br> of their respective owners.</p>
+                        <p style="font-size: 10px;margin-top:0px;">All games on this are the property </br> of their respective owners.</p>
                     </div>
 
                 </div>
