--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <link rel="shortcut icon" href="image/favicon.ico">
     <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
-    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZX17ZX9PFL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZX17ZX9PFL');
+</script>
 </head>
 
 <body style="overflow-x:hidden;">
